--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -5,6 +5,14 @@
         <link rel="canonical" href="https://sockscap64.github.io/free-nodes/page-3.htm" />
     <title>免费节点 - Sockscap64免费机场节点分享官网 - 第2页</title>
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
+
+    <meta name="author" content="Sockscap64免费机场节点分享官网">
+    <meta property="og:type" content="webpage" />
+    <meta property="og:url" content="https://sockscap64.github.io/free-nodes/page-3.htm" />
+    <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
+    <meta property="og:title" content="免费节点 - Sockscap64免费机场节点分享官网 - 第2页" />
+    <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
+        
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="templatemo">
@@ -98,6 +106,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、日本、新加坡、香港、韩国、加拿大、美国等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="12月28日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月28日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、日本、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2024-12-27">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -178,16 +214,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-40861.htm" title="适合穷人养的猫咪（适合穷人养的猫咪品种）">适合穷人养的猫咪（适合穷人养的猫咪品种）</a></li>
-                        <li class="py-2"><a href="/news/article-38395.htm" title="OpenSSL3.0.5安装">OpenSSL3.0.5安装</a></li>
-                        <li class="py-2"><a href="/news/article-30725.htm" title="动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）">动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）</a></li>
-                        <li class="py-2"><a href="/news/article-35797.htm" title="东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）">东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-6-node-share.htm" title="1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-35796.htm" title="k8s 部署pod到指定node">k8s 部署pod到指定node</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-10-free-subscribe-node.htm" title="1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" title="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/news/article-32150.htm" title="八公家宠物酒店（八公家宠物酒店怎么样）">八公家宠物酒店（八公家宠物酒店怎么样）</a></li>
+                        <li class="py-2"><a href="/news/article-40860.htm" title="免费领养宠物包邮吗现在（免费领养宠物送到家）">免费领养宠物包邮吗现在（免费领养宠物送到家）</a></li>
+                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-3-free-high-speed-nodes.htm" title="1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-41846.htm" title="python开发HDFS">python开发HDFS</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-11-free-node-subscribe.htm" title="1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-17-free-high-speed-nodes.htm" title="1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-13-node-share-links.htm" title="1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址">1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -199,7 +235,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
